resources/testweb/userdashboard.css
/*
 * Base structure
 */

 /* Move down content because we have a fixed navbar that is 50px tall */
/*body {
  padding-top: 50px;
  }*/
/*  .alert {
    margin-left: 18px;
     margin-right: 18px;

     }*/

/*     .btn-default {

      position:relative; 
      bottom:0;
      }*/

      #discover_creators_square > div:nth-child(4n+1) {
         clear: both;
      }
      .stButton .stButton_gradient {
        height: 24px !important;
      }

      .stButton .stFb, .stButton .stTwbutton, .stButton .stMainServices {
        height: 24px !important;
      }

      img {
/*        display: inline-block;
        height: 100%;
        vertical-align: middle;
        width:  auto;*/


        border:1px solid #021a40;

        /*horizontal-align: middle;*/
      }
      #creator_search {
        margin-top: 3px;


      }
      .discover-tile {
       /* height: 580px;*/
      }
      .discover-image {
       margin: -15px;
       padding: 0px;
       border:0px;
       border-top-left-radius:4px;
       border-top-right-radius:4px;
/*       display: block;
       
       height:206.25px !important;
       width:auto !important;*/

     }
     .remove-border {
      border:0px;
      border-top-left-radius:4px;
      border-top-right-radius:4px;
    }



    .list-group-item {
      margin-top: -2px;
      margin-bottom: -2px;
    }


    .carousel-inner>.item>img, .carousel-inner>.item>a>img {
/*        position: absolute;
        margin-left:auto; margin-right:auto;
        overflow:hidden;
        vertical-align:middle;
        display:table-cell;
        text-align: center;*/

      }

      #disqus_thread p { font-size: 13px;  color: black !important;; background-color: #2c2c2c;}
      #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px;  color: black !important;}
      .dsq-comment-text p { color: black !important; }


      .nav-list {
        width: 228px;
        margin: 30px 0 0;
        padding: 0;
        background-color: #F7F7F7;
        -webkit-border-radius: 6px;
        -moz-border-radius: 6px;
        border-radius: 6px;
        -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
        -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
        box-shadow: 0 1px 4px rgba(0,0,0,.065);
      }
      .nav-list > .active > a, .nav-list > .active > a:hover, .nav-list > .active > a:focus {
        color: #ffffff;
        text-shadow: 0 -1px 0 
        rgba(0, 0, 0, 0.2);
        background-color: #BABABA;
      }
      #midCol.affix-top {
        position:fixed;
        margin-left:-18px;
        margin-right:10px;
      }

      #midCol.affix-bottom {
        position:static;
      }

      #midCol.affix {
        position:static;
      }

      @font-face {
        font-family: 'Glyphicons Halflings';
        src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot');
        src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
        url('bootstrap-dist/fonts/glyphicons-halflings-regular.woff') format('woff'), 
        url('bootstrap-dist/fonts/glyphicons-halflings-regular.ttf') format('truetype'), 
        url('bootstrap-dist/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
      }
      .navbar-input-group {
        font-size: 0px; /*removes whitespace between button and input*/

      }
      #creator_search > button {
        margin-left: -2px;
      }


      .navbar-input-group input {
        border-top-right-radius: 0px;
        border-bottom-right-radius: 0px;
      }
      .navbar-input-group .btn {
        border-top-left-radius: 0px;
        border-bottom-left-radius: 0px;
        border-left: 0px;
      }
      .navbar-input-group {
        margin-top: 0px;
        margin-bottom: 0px;
        margin-right: 0px;
        margin-left: 0px;
      }


      .pager-footer {
        height: 41px;
      }


      .pager {
        margin-top: -6px;
        
      }


      .table {
        font-size: .85em;
      }


      /*dropdown hover*/
      ul.nav li.dropdown:hover > ul.dropdown-menu {
        display: block;    
      }
      .input-group-addon {
        background-color: #F7F7F7;
      }

      .mini-submenu{
        display:none;  
        background-color: rgba(0, 0, 0, 0.6);  
        border: 1px solid rgba(0, 0, 0, 0.9);
        border-radius: 4px;
        padding: 9px;  
        /*position: relative;*/
        width: 42px;

      }

      .mini-submenu:hover{
        cursor: pointer;
      }

      .mini-submenu .icon-bar {
        border-radius: 1px;
        display: block;
        height: 2px;
        width: 22px;
        margin-top: 3px;
      }

      .mini-submenu .icon-bar {
        background-color: #999;
      }

      #slide-submenu{
        background: rgba(0, 0, 0, 0.45);
        display: inline-block;
        padding: 0 8px;
        border-radius: 4px;
        cursor: pointer;
      }

      .announcement-heading {
        font-size: 35px;
        margin: 0;
      }

      .announcement-text,  {
        margin: 0;
        font-size: 12px;

      }
      .announcement-bottom {
        font-size: 14px;
      }

      .sidebar {
        padding-left: 40px;
      }



/*
 * Global add-ons
 */

 .sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*#mynav li.active a {background-color:red;}*/
/*
 * Sidebar
 */
/*
 #mynav.affix-top {
    position: inherit;
    margin-top:30px;
    width:228px;
  }
  
  #mynav.affix {
    position: inherit;
    top:70px;
    width:228px;
    }*/

    @media(max-width:993px){
     .affix {
       position: static;
       width: auto;
       top: 0;
     }
     .affix-top {
      width: 100%;
    }
  }

  @media(min-width:993px) {
    #mynav {
      font-size: .75em;
    }
    #mynav > li {
      height: 30px;
    }

    #mynav.affix-top {
      position: static;
      margin-top:30px;
      width: 275px;
    }

    #mynav.affix {
  /*    position: fixed;
  top:-200px;*/
  position: static;
  margin-top:-150px;
  width: 275px;
}
}
/* Hide for mobile, show later */
@media (min-width: 768px) {




/*  .affix,.affix-top,#midCol.affix,#midCol.affix-top {
    position:static;
    }*/

    .navbar {
      height: 52px;
    }
    .sidebar {
      position: fixed;
      top: 52px;
      bottom: 0;
      left: 0;
      z-index: 1000;
      display: block;
      padding: 20px;
      overflow-x: hidden;
      overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
      /*background-color: #f5f5f5;*/
      /*border-right: 1px solid #eee;*/
    }

    .right-sidebar {
      position: relative;
      float:right;
      top: 51px;
      bottom: 0;
      /*right: 0;*/
      z-index: 1000;
      display: block;
      padding: 20px;
      overflow-x: hidden;
      /*overflow-y: auto; */
      /* Scrollable contents if viewport is shorter than content. */
      /*background-color: #f5f5f5;*/
      /*border-right: 1px solid #eee;*/
    }


  }



/*
 * Main content
 */

/*.main {
  padding: 20px;
  }*/
/*@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
  }*/
  .main .page-header .main-col {
    margin-top: 0;
  }


/*
 * Placeholder dashboard ideas
 */

 .placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}

.fullscreen-chart {
  height: 70vh;
}

.small-chart {
  /*height: 50vh;*/
  height: 350px;
  /*overflow: auto;*/
}
.small-table {
  height: 339px;
  overflow: auto;
}

.btn {
  margin: 3px;
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 400px;
  margin-bottom: 52px;
  margin-top: -20px;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;

}
.blur {
  -webkit-filter: blur(1px);
  -moz-filter: blur(1px);
  -o-filter: blur(1px);
  -ms-filter: blur(1px);
  filter: blur(1px);
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 400px;
  background-color: #222222;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 400px;
}



/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}

.carousel-body {
  padding-bottom: 40px;
/*  color: #DBDBDB;
background-color: #222222;*/

}

